apps/app-server/overlay/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
spec:
  ingressClassName: traefik-external
  rules:
    - host: app-server-dev.poc.mdplabs.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-server
                port:
                  number: 9000
  tls:
    - hosts:
        - app-server-dev.poc.mdplabs.dev
      secretName: app-server-tls
